--- a/ePubReader/ePubReader/Views/MainPage.xaml
+++ b/ePubReader/ePubReader/Views/MainPage.xaml
@@ -12,7 +12,7 @@
       xmlns:comppro="using:CompositionProToolkit.Controls"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:vm="using:ePubReader.ViewModels"
-      xmlns:controls1="using:ePubReader.Controls"
+      xmlns:localControls="using:ePubReader.Controls"
       mc:Ignorable="d"
       NavigationCacheMode="Enabled">
 
@@ -40,24 +40,30 @@
             </controls:PageHeader.PrimaryCommands>
         </controls:PageHeader>
 
-        <controls1:EPubItemsControl Grid.Row="1"
+        <localControls:EPubItemsControl Grid.Row="1"
                   ItemsSource="{Binding ImportedEPubs, Mode=TwoWay}"
                   Margin="12"
                   x:Name="ePubGridView">
-            <controls1:EPubItemsControl.ItemsPanel>
+            <localControls:EPubItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <comppro:FluidWrapPanel IsComposing="True"
                                             ItemHeight="204"
                                             ItemWidth="144"/>
                 </ItemsPanelTemplate>
-            </controls1:EPubItemsControl.ItemsPanel>
+            </localControls:EPubItemsControl.ItemsPanel>
             <FlyoutBase.AttachedFlyout>
                 <MenuFlyout x:Name="ePubMenuFlyout">
                     <MenuFlyoutItem Text="Change cover"
                                     Click="{x:Bind ViewModel.ChangeCoverMenuItemClick}"/>
                 </MenuFlyout>
             </FlyoutBase.AttachedFlyout>
-        </controls1:EPubItemsControl>
+        </localControls:EPubItemsControl>
     </Grid>
 </Page>
+
+
+
+
+
+
 
