Trying to work with .epub format will be too much of a pain in the neck, especially for allowing editing. Starts work on converting epub to JSON.

--- a/ePubReader/ePubReader/Views/MainPage.xaml
+++ b/ePubReader/ePubReader/Views/MainPage.xaml
@@ -46,8 +46,9 @@
                 <DataTemplate x:DataType="models:ePub">
                     <Grid Height="204"
                           Width="132"
-                          Background="Transparent"
-                          RightTapped="ePubItemRightTapped">
+                          Background="#CCC"
+                          RightTapped="ePubItemRightTapped"
+                          Holding="ePubItemRightTapped">
                         <Interactivity:Interaction.Behaviors>
                             <comppro:FluidPointerDragBehavior DragButton="MouseLeftButton"/>
                         </Interactivity:Interaction.Behaviors>
