--- a/ePubReader/ePubReader/Views/MainPage.xaml
+++ b/ePubReader/ePubReader/Views/MainPage.xaml
@@ -40,24 +40,26 @@
             </controls:PageHeader.PrimaryCommands>
         </controls:PageHeader>
 
-        <localControls:EPubItemsControl Grid.Row="1"
+        <ScrollViewer VerticalScrollMode="Enabled"
+                      Grid.Row="1">
+            <localControls:EPubItemsControl Grid.Row="1"
                                         ItemsSource="{Binding ImportedEPubs, Mode=TwoWay}"
-                                        Margin="12"
-                                        x:Name="ePubGridView">    
-            <localControls:EPubItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <comppro:FluidWrapPanel IsComposing="True"
+                                        Margin="12">
+                <localControls:EPubItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <comppro:FluidWrapPanel IsComposing="True"
                                             ItemHeight="216"
                                             ItemWidth="144"/>
-                </ItemsPanelTemplate>
-            </localControls:EPubItemsControl.ItemsPanel>
-            <FlyoutBase.AttachedFlyout>
-                <MenuFlyout x:Name="ePubMenuFlyout">
-                    <MenuFlyoutItem Text="Change cover"
+                    </ItemsPanelTemplate>
+                </localControls:EPubItemsControl.ItemsPanel>
+                <FlyoutBase.AttachedFlyout>
+                    <MenuFlyout x:Name="ePubMenuFlyout">
+                        <MenuFlyoutItem Text="Change cover"
                                     Click="{x:Bind ViewModel.ChangeCoverMenuItemClick}"/>
-                </MenuFlyout>
-            </FlyoutBase.AttachedFlyout>
-        </localControls:EPubItemsControl>
+                    </MenuFlyout>
+                </FlyoutBase.AttachedFlyout>
+            </localControls:EPubItemsControl>
+        </ScrollViewer>
     </Grid>
 </Page>
 
